# weekly-flow

./: .gitignore  Makefile  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: REQUIREMENTS.md
references/: WEEKLY_REPORT_FORMAT.md
scripts/: build-release.sh  release.sh
src/: __init__.py  date_utils.py  storage.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_date_utils.py  test_git_analyzer.py  test_report_generator.py  test_storage.py
